--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_CONNECT_URL=mongodb+srv://deepak988088:3pGPK8WzLOIFA3Ba@cluster0.p56djlr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0/test
+MONGODB_CONNECT_URL=mongodb+srv://deepak988088:0IHrYhwt2HaxZkeA@cluster0.p56djlr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
